--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -45,3 +45,10 @@ function reset() {
 flgはtrueかfalseの値を格納する時によく使われる変数名。英語のflag(意味:旗)が由来。
 ちなみに、変数名をflg以外の任意の名前に変えても問題なく動く。
 
+* **document.bgColor**
+```
+document.bgColor　= "色";
+```
+
+`document.bgColor`を使うと、ページの背景色を変更できる。
+
