--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -1,6 +1,7 @@
 *目次*
 * [ダイアログとは？](#ダイアログとは？)
 * [confirm](#confirm)
+* [confirmを使った〇✖クイズ](#confirmを使った〇✖クイズ)
 
 ### ダイアログとは？
 
@@ -56,4 +57,43 @@ document.bgColor　= "色";
 ```
 
 `document.bgColor`を使うと、ページの背景色を変更できる。
+
+### confirmを使った〇✖クイズ
+
+```
+// 〇✖クイズプログラム
+
+var rule = new Array(
+"○✖クイズを出題するよ","まずはルールの説明から",
+"「〇」だと思ったら「OK」、「✖」だと思ったら「キャンセル」を押してね",
+"それでは、いっくよ～","ジャジャン!"
+);
+
+var flg;
+var one_more;
+
+function nandemo() {
+　// 配列とループを組み合わせてルール説明を表示
+  for(var i = 0; i <= 4; i++){
+  alert(rule[i]);
+ }
+
+quiz();　
+
+}
+
+function quiz() {
+ flg = confirm("Q.カバの汗はピンク色。OK or キャンセル？");
+ 
+ if (flg == true) {
+  alert("正解!");
+ } else if(flg == false) {
+  alert("ブッブー!");
+  one_more = confirm("もう一度クイズにチャレンジする？");
+   if(one_more == true) {
+    quiz();　// 関数の中で再び同じ関数を使用することで間違った時にもう一度クイズにチャレンジできるようにした
+   }
+  }
+ }
+```
 
