--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -1,7 +1,7 @@
 *目次*
 * [ダイアログとは？](#ダイアログとは？)
 * [confirm](#confirm)
-* [confirmを使った〇✖クイズ](#confirmを使った〇✖クイズ)
+* [confirmを使ったまるばつクイズ](#confirmを使ったまるばつクイズ)
 
 ### ダイアログとは？
 
@@ -58,7 +58,7 @@ document.bgColor　= "色";
 
 `document.bgColor`を使うと、ページの背景色を変更できる。
 
-### confirmを使った〇✖クイズ
+### confirmを使ったまるばつクイズ
 
 ```
 // 〇✖クイズプログラム
