--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -2,6 +2,7 @@
 * [ダイアログとは？](#ダイアログとは？)
 * [confirm](#confirm)
 * [confirmを使ったまるばつクイズ](#confirmを使ったまるばつクイズ)
+* [elseの無いif文について](#elseの無いif文について)
 
 ### ダイアログとは？
 
@@ -96,4 +97,57 @@ function quiz() {
   }
  }
 ```
+
+### elseの無いif文について
+
+上で書いた「〇✖クイズのプログラム」で、疑問に思ったことがあった。
+
+それは、**if文はelseがなくても問題ないのか**とうことだ。
+
+結論から書くと、elseがなくてもOK。
+
+**解説**
+
+ここからは、なぜelseがなくてもokなのかについて詳しく見ていく。
+
+elseの無いif文を丁寧に書くと以下になる。
+
+```
+if(条件) {
+処理1
+}
+
+else {
+// 未処理
+}
+```
+
+意味は **「条件を満たしていれば、処理1を実行する。しかし、条件を満たさない場合は、何もしない」** となる。  
+elseのカッコの中が空なので、条件を満たさない場合は、何もしないのと同じになる。
+
+この場合、elseとその後のカッコの記述を省略して以下のように書くことができる。
+
+```
+if(条件) {
+処理1
+}
+```
+
+**まとめ**  
+`if(条件)`だけ書いた場合は、自動的に「条件を満たさない場合は何もしない」となる。
+
+分かりにくい場合は、if文の基本形が以下の形なのでそれが省略されているだけと考えても良い。
+
+```
+if(条件) {
+処理1
+}
+
+else {
+処理2
+}
+
+// 意味は「条件を満たしていれば、処理1を実行する。しかし、条件を満たさない場合は、処理2を実行する」
+```
+
 
