--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -134,7 +134,7 @@ if(条件) {
 ```
 
 **まとめ**  
-`if(条件)`だけ書いた場合は、自動的に「条件を満たさない場合は何もしない」となる。
+`if(条件)`だけを書いた場合は、自動的に「条件を満たさない場合は何もしない」となる。
 
 分かりにくい場合は、if文の基本形が以下の形なのでそれが省略されているだけと考えても良い。
 
@@ -148,7 +148,7 @@ else {
 }
 
 // 意味は「条件を満たしていれば、処理1を実行する。しかし、条件を満たさない場合は、処理2を実行する」
-// 処理2に何も書かなければ「何もしない」の意味になり、elseを省略することが可能
+// 処理2に何も書かなければ「何もしない」の意味になり、elseは省略することが可能
 ```
 
 
