--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -134,7 +134,7 @@ if(条件) {
 ```
 
 **まとめ**  
-`if(条件)`だけを書いた場合は、自動的に「条件を満たさない場合は何もしない」となる。
+`if(条件)`だけを書いた場合は、自動的に「その条件に当てはまらなかったら何もしない」となる。
 
 分かりにくい場合は、if文の基本形が以下の形なのでそれが省略されているだけと考えても良い。
 
