--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -3,6 +3,7 @@
 * [confirm](#confirm)
 * [confirmを使ったまるばつクイズ](#confirmを使ったまるばつクイズ)
 * [elseの無いif文について](#elseの無いif文について)
+* [prompt](#prompt)
 
 ### ダイアログとは？
 
@@ -152,5 +153,13 @@ else {
 ```
 
 要するに、`else{// 何もしない}`が省略されているだけってことだね。
+
+### prompt
+
+ユーザーから文字列の入力を受け取るボックス(インプットボックス)を表示させることができる。　
+
+```
+変数 = prompt( "質問文" , "最初に表示する文字(空欄でもok)" );
+```
 
 
