--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -69,7 +69,7 @@ HTMLの正式名称であるHypertext Markup LanguageのMarkupはここから来
 |タグ|説明|
 |-|-|
 |`<body background="*"></body>`|背景に画像を指定する。|
-|`<div align="center"></div>`|囲んだ中身を中央に揃える。`<div>`自体は意味のあるタグではなく、中央寄せやCSSの効果範囲を指定するのに利用する。alignは「調節する」の意。ちなみにdivはdivision(分割)の略。|
+|`<div align="center"></div>`|※この`align`はHTML5で廃止された模様。囲んだ中身を中央に揃える。`<div>`自体は意味のあるタグではなく、中央寄せやCSSの効果範囲を指定するのに利用する。alignは「調節する」の意。ちなみにdivはdivision(分割)の略。|
 |`<a href ="*"></a>`|hrefで指定したページにリンクする。|
 |`<hr width="*">`|水平線を表示。width="数字"で長さを指定。|
 |`<strong></strong>`|太字|
