--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -162,4 +162,22 @@ else {
 変数 = prompt( "質問文" , "最初に表示する文字(空欄でもok)" );
 ```
 
+**具体例**
+
+```
+// ポケモンで博士に名前を聞かれる時っぽいプログラム
+var str;
+
+function nandemo() {
+ str = prompt("おぬしの名前はなんというのかね？","さん");
+
+ if (str == "") str = "名無しの権兵衛";
+
+document.write("<p>");
+document.write("ふむ…。<strong>" + str + "</strong>というのか…良い名前じゃな" );
+document.write("</p>");
+
+}
+```
+
 
