--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -171,7 +171,7 @@ var str;
 function nandemo() {
  str = prompt("おぬしの名前はなんというのかね？","さん");
 
- if (str == "") str = "名無しの権兵衛";
+ if (str == "") str = "名無しの権兵衛";　//if文で処理が一つしかない場合は括弧を省略できる
 
 document.write("<p>");
 document.write("ふむ…。<strong>" + str + "</strong>というのか…良い名前じゃな" );
