--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -4,6 +4,7 @@
 * [confirmを使ったまるばつクイズ](#confirmを使ったまるばつクイズ)
 * [elseの無いif文について](#elseの無いif文について)
 * [prompt](#prompt)
+* [promptでキャンセルを押すと？](#promptでキャンセルを押すと？)
 
 ### ダイアログとは？
 
@@ -180,4 +181,17 @@ document.write("</p>");
 }
 ```
 
+### promptでキャンセルを押すと？
+
+`prompt`でキャンセルを押すと、変数の中身が`null`となる。
+
+`null`とは、**何のデータも含まれない状態**を表す。
+
+これを防ぐには以下のコードを追記すると良い。
+
+```
+if (str == null) str = "名無しの権兵衛";
+```
+
+そうすると、キャンセルを押した場合でも名前が表示されるようになる。
 
