--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -4,7 +4,7 @@
 * [confirmを使ったまるばつクイズ](#confirmを使ったまるばつクイズ)
 * [elseの無いif文について](#elseの無いif文について)
 * [prompt](#prompt)
-* [promptでキャンセルを押すと？](#promptでキャンセルを押すと？)
+* [promptでキャンセルを押すと？](#promptでキャンセルを押すと)
 
 ### ダイアログとは？
 
@@ -181,7 +181,7 @@ document.write("</p>");
 }
 ```
 
-### promptでキャンセルを押すと？
+### promptでキャンセルを押すと
 
 `prompt`でキャンセルを押すと、変数の中身が`null`となる。
 
