--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -72,6 +72,15 @@ linkタグはhead内に書き、以下のように書く。
  relは「relation（関係）」の略で、rel=""の部分には「ファイルとの関係性」を書く。  
  hrefはhypertext referenceの略。referenceは「参照」の意。
 
+* **type属性は不要**
+
+ちなみに、以下のように`linkタグ`でtype属性を指定する場合があるが、HTML5においては**script 要素、style 要素に対する、type 属性は省略できる。**
+
+省略してもデフォルト値としてscript 要素は「text/javascript」 が、style 要素は「text/css」 がセットされるので問題ない。
+```
+<link rel="stylesheet" type="text/css" href="sample.css">
+```
+
 ### 基本文法
 ```
 セレクタ {
