--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -74,9 +74,9 @@ linkタグはhead内に書き、以下のように書く。
 
 * **type属性は不要**
 
-ちなみに、以下のように`linkタグ`でtype属性を指定する場合があるが、HTML5においては**script 要素、style 要素に対する、type 属性は省略できる。**
+ちなみに、以下のように`linkタグ`でtype属性を指定する場合もあるが、HTML5においては**script 要素、style 要素に対する、type 属性は省略できる。**
 
-省略してもデフォルト値としてscript 要素は「text/javascript」 が、style 要素は「text/css」 がセットされるので問題ない。
+省略してもtype属性のデフォルト値としてscript 要素は「text/javascript」 が、style 要素は「text/css」 がセットされるので問題ない。
 ```
 <link rel="stylesheet" type="text/css" href="sample.css">
 ```
