--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -16,6 +16,8 @@
 
 ### confirm
 
+英語で「確認する」の意味。
+
 ```
 confirm("ここに質問文を記述");
 ```
@@ -158,6 +160,8 @@ else {
 ### prompt
 
 ユーザーから文字列の入力を受け取るボックス(インプットボックス)を表示させることができる。　
+
+promptは英語で「指示」という意味。
 
 ```
 変数 = prompt( "質問文" , "最初に表示する文字(空欄でもok)" );
