--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -5,6 +5,7 @@
 * [elseの無いif文について](#elseの無いif文について)
 * [prompt](#prompt)
 * [promptでキャンセルを押すと？](#promptでキャンセルを押すと)
+* [promptで秘密のページを作成](#promptで秘密のページを作成)
 
 ### ダイアログとは？
 
@@ -199,3 +200,42 @@ if (str == null) str = "名無しの権兵衛";
 
 そうすると、キャンセルを押した場合でも名前が表示されるようになる。
 
+### promptで秘密のページを作成
+
+```
+var pw;
+
+function nandemo() {
+ pw = prompt("パスワードを入力してね","");
+
+   if (pw == "hanakuso"){
+   location.href="secret.html";
+ } else {
+   alert("あれれ、何かがおかしいよ。パスワードが間違ってるのかも…？");
+}
+
+}
+```
+
+```
+// 秘密のページのhtml。ファイル名は「secret.html」 
+<!DOCTYPE html>
+<html>
+ <head>
+  <link rel="stylesheet" href="sample-2.css">
+  <title>ようこそ、秘密のページへ</title>
+ </head>
+ <body>
+<div class="text">
+ピー…がががが<br>
+ようこそ、秘密のページへ<br>
+突然だが、あなたはパラレルワールドをご存じかな<br>
+パラレルワールドとは、観察者がいる世界から、過去のある時点で分岐して併存するとされる世界のことだ<br>
+並行世界と呼ばれることもある<br>
+…繝代Λ繝ｬ繝ｫ繝ｯ繝ｼ繝ｫ繝 <br><br>
+
+<a href ="index.html">戻る</a>
+</div>
+ </body>
+</html>
+```
