--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -5,7 +5,7 @@
 * [elseの無いif文について](#elseの無いif文について)
 * [prompt](#prompt)
 * [promptでキャンセルを押すと？](#promptでキャンセルを押すと)
-* [promptで秘密のページを作成](#promptで秘密のページを作成)
+* [promptで秘密のページを作る](#promptで秘密のページを作る)
 
 ### ダイアログとは？
 
@@ -200,9 +200,10 @@ if (str == null) str = "名無しの権兵衛";
 
 そうすると、キャンセルを押した場合でも名前が表示されるようになる。
 
-### promptで秘密のページを作成
+### promptで秘密のページを作る
 
 ```
+// JavaScript
 var pw;
 
 function nandemo() {
