--- a/マークアップ言語/CSS/注釈(上付き文字).md
+++ b/マークアップ言語/CSS/注釈(上付き文字).md
@@ -9,5 +9,5 @@ font-size: 0.6em; /*テキストを小さく*/
 
 ||意味|
 |-|-|
-|vertical-align|テキストや画像などの上下方向の揃え位置を指定するプロパティ。`super`で上付き文字の位置に。インライン要素とテーブルセルにのみ適用することができる。セルとは表（テーブル）を構成する一つ一つのマス目のこと。英語のcell(意味:マス目)が由来。|
+|`vertical-align`|テキストや画像などの上下方向の揃え位置を指定するプロパティ。`super`で上付き文字の位置に。インライン要素とテーブルセルにのみ適用することができる。セルとは表（テーブル）を構成する一つ一つのマス目のこと。英語のcell(意味:マス目)が由来。|
 |||
