--- a/マークアップ言語/CSS/注釈(上付き文字).md
+++ b/マークアップ言語/CSS/注釈(上付き文字).md
@@ -10,4 +10,4 @@ font-size: 0.6em; /*テキストを小さく*/
 ||意味|
 |-|-|
 |`vertical-align`|テキストや画像などの上下方向の揃え位置を指定するプロパティ。`super`で上付き文字の位置に。インライン要素とテーブルセルにのみ適用することができる。英語vertical(意味:垂直)。セルとは表（テーブル）を構成する一つ一つのマス目のこと。英語のcell(意味:マス目)が由来。|
-|||
+|em|文字の高さを基準とした単位。デフォルトの文字サイズは`16px`であることから、何もしていない場合は`1em=16px`となる。emは相対単位なのでブラウザなどで文字サイズを変更した場合、その大きさに合わせて文字が大きくなる。|
