--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -12,4 +12,4 @@ print "Hello, perl!";
 
 **説明**
 
-1行目の`#!`の後には、perlの実行ファイルのあるパスを入力する。上記のコードではxamppでインストールした場合のデフォルトのパスを入力している。
+1行目の`#!`の後には、perlの実行ファイルのあるパスを入力する。上記のコードではxamppでperlをインストールした場合のデフォルトのパスを入力している。
