--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -18,7 +18,7 @@ print "Hello, perl!";
 
 ||意味|
 |-|-|
-|Content-type|ファイルの種類を識別するための情報のこと。メールやホームページのファイルと一緒に送られる。似たものに`MIMEタイプ`があるが、これも`Content-type`と同じような意味合いで使われる。|
-|||
+|`Content-type`|ファイルの種類を識別するための情報のこと。メールやホームページのファイルと一緒に送られる。似たものに`MIMEタイプ`があるが、これも`Content-type`と同じような意味合いで使われる。|
+|`text/html`|HTMLファイルを表す。|
 
 
