--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -21,4 +21,12 @@ print "Hello, perl!";
 |`Content-type`|ファイルの種類を識別するための情報のこと。メールやホームページのファイルと一緒に送られる。似たものに`MIMEタイプ`があるが、これも`Content-type`と同じような意味合いで使われる。|
 |`text/html`|HTMLファイルを表す。|
 
+**補足**
+
+`Content-type`や`MIMEタイプ`は、**HTTPレスポンスヘッダ**と呼ばれる場所に記載される。
+
+**HTTPレスポンスヘッダ**は、デベロッパーツールの「ネットワーク」の項目から「再読み込み」をすることで見ることができる。
+
+HTTPレスポンスヘッダは、webブラウザさんがwebサーバーさんに「このページをください」と言って、webサーバーさんから「ほいよ」と返ってきた返事(HTTPレスポンスと呼ぶ)の中に含まれている。
+
 
