--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -27,6 +27,6 @@ print "Hello, perl!";
 
 **HTTPレスポンスヘッダ**は、デベロッパーツールの「ネットワーク」の項目から「再読み込み」をすることで見ることができる。
 
-HTTPレスポンスヘッダは、webブラウザさんがwebサーバーさんに「このページをください」と言って、webサーバーさんから「ほいよ」と返ってきた返事(HTTPレスポンスと呼ぶ)の中に含まれている。
+HTTPレスポンスヘッダは、webブラウザさんがwebサーバーさんに「このページをください」と言って、webサーバーさんから「ほいよ」と返ってきた返事(**HTTPレスポンス**と呼ぶ)の中に含まれている。
 
 
