--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -14,7 +14,7 @@ print "Hello, perl!";
 
 * 1行目の`#!`の後には、perlの実行ファイルのあるパスを入力する。上記のコードではxamppでperlをインストールした場合のデフォルトのパスを入力している。
 
-* 2行目
+* 2行目:サーバーからブラウザに情報が返ってくる時に必要なもの。
 
 ||意味|
 |-|-|
