--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -1,3 +1,7 @@
+*目次*
+* [Hello perl](#Hello perl)
+* [拡張子cgiとplの違い](#拡張子cgiとplの違い)
+
 ### Hello perl
 
 ```
@@ -28,5 +32,15 @@ print "Hello, perl!";
 **HTTPレスポンスヘッダ**は、デベロッパーツールの「ネットワーク」の項目から「再読み込み」をすることで見ることができる。
 
 HTTPレスポンスヘッダは、webブラウザさんがwebサーバーさんに「このページをください」と言って、webサーバーさんから「ほいよ」と返ってきた返事(**HTTPレスポンス**と呼ぶ)の中に含まれている。
+
+### 拡張子cgiとplの違い
+
+perlで書いたプログラムファイルの拡張子を`pl`から`cgi`に変えても、問題なく動作し実行結果も同じだったことから、どっちを使うのがよいのだろうと疑問に思った。
+
+結論は、CGIとしてPerlスクリプトを使うときは`.cgi`という拡張子を付ける。
+
+なのでcgiとして書くかどうか？を使い分けの判断基準にすると良い。
+
+
 
 
