--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -62,6 +62,18 @@ print "こんにちわ";
 ã“ã‚“ã«ã¡ã‚
 ```
 
+**対処法**
+
+2行目を`print "Content-type: text/html;charset=utf-8\n\n";`に変更することで、対処できた。
+
+**解説**
+
+||意味|
+|-|-|
+|charset属性|charset(キャラセット)と読む。character setの略。**文字エンコード**を指定するための属性。|
+|文字エンコード|文字データをコンピュータが理解できるように数値に変換すること。|
+
+
 
 
 
