--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -71,7 +71,7 @@ print "こんにちわ";
 ||意味|
 |-|-|
 |charset属性|charset(キャラセット)と読む。character setの略。**文字エンコード**を指定するための属性。|
-|文字エンコード|文字データをコンピュータが理解できるように数値に変換すること。|
+|文字エンコード|コンピュータが文字情報を理解するために使う文字と数値(0と1の組み合わせ)の対応表のこと。もしくは文字データをコンピュータが理解できるように数値に変換すること。|
 
 
 
