--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -73,6 +73,21 @@ print "こんにちわ";
 |charset属性|charset(キャラセット)と読む。character setの略。**文字エンコード**を指定するための属性。|
 |文字エンコード|コンピュータが文字情報を理解するために使う文字と数値(0と1の組み合わせ)の**対応表**のこと。もしくは文字データをコンピュータが理解できるように数値に変換すること。|
 
+**補足**
+
+HTMLで文字エンコードを指定するには、head内に以下のように書く。
+
+```
+<meta charset="UTF-8">
+```
+
+上記の書き方はHTML5の書き方で、HTML5より前のバージョンの書き方は以下になる。
+
+```
+<meta http-equiv="content-type" content="text/html; charset=文字コード">
+```
+
+あれ？これって、さっき文字化けの対処のところで書いたコードと同じじゃね？と思った。
 
 
 
