--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -87,7 +87,15 @@ HTMLで文字エンコードを指定するには、head内に以下のように
 <meta http-equiv="content-type" content="text/html; charset=文字コード">
 ```
 
-あれ？これって、さっき文字化けの対処のところで書いたコードと同じじゃね？と思った。
+あれ？これって、さっき文字化けの対処のところで書いたコードと同じじゃね？と思って、以下のコードを書いてみたけど500エラーでダメだった。
+
+```
+#!C:\xampp\perl\bin\perl.exe
+print "charset=\"UTF-8\"\n\n";
+$a=5;
+$b=3+5;
+print "こんにちわ";
+```
 
 
 
