--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -91,7 +91,7 @@ HTMLで文字エンコードを指定するには、head内に以下のように
 
 ```
 #!C:\xampp\perl\bin\perl.exe
-print "charset=\"UTF-8\"\n\n";
+print "charset=\"UTF-8\"\n\n"; // 変更部分
 $a=5;
 $b=3+5;
 print "こんにちわ";
