--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -86,6 +86,7 @@ HTMLで文字エンコードを指定するには、head内に以下のように
 ```
 <meta http-equiv="content-type" content="text/html; charset=文字コード">
 ```
+`equiv`はequivalent(意味:相当する)の略。
 
 あれ？これって、さっき文字化けの対処のところで書いたコードと同じじゃね？と思って、以下のコードを書いてみたけど500エラーでダメだった。
 
