--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -2,6 +2,7 @@
 * [Hello perl](#Helloperl)
 * [拡張子cgiとplの違い](#拡張子cgiとplの違い)
 * [文字化け](#文字化け)
+* [計算を行う](#計算を行う)
 
 ### Helloperl
 
@@ -96,6 +97,16 @@ print "charset=\"UTF-8\"\n\n"; // 変更部分
 $a=5;
 $b=3+5;
 print "こんにちわ";
+```
+
+### 計算を行う
+
+```
+#!C:\xampp\perl\bin\perl.exe
+print "Content-type: text/html;charset=utf-8\n\n";
+$a=5;
+$b=3+5;
+print "計算結果:$b";
 ```
 
 
