--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -3,6 +3,7 @@
 * [拡張子cgiとplの違い](#拡張子cgiとplの違い)
 * [文字化け](#文字化け)
 * [計算を行う](#計算を行う)
+* [ランダム表示](#ランダム表示)
 
 ### Helloperl
 
@@ -115,6 +116,20 @@ print "計算結果:$b";
 計算結果:8
 ```
 
+### ランダム表示
+
+ランダムな数値の変化に合わせて、うんちを表示させるプログラム。
+
+```
+#!C:\xampp\perl\bin\perl.exe
+print "Content-type: text/html;charset=utf-8\n\n";
+$a = int(rand 6) +1;
+print "$a";
+while($a > 0) {
+print "💩";
+--$a; 
+}
+```
 
 
 
