--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -102,6 +102,8 @@ print "こんにちわ";
 
 ### 計算を行う
 
+変数の書き方PHPと同じだね。
+
 ```
 #!C:\xampp\perl\bin\perl.exe
 print "Content-type: text/html;charset=utf-8\n\n";
