--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -133,5 +133,13 @@ print "💩";
 }
 ```
 
+**解説**
+
+||意味|
+|-|-|
+|連結演算子|「`.`」を使用すると文字列をつなげることができる。例:`print "こんにちわ"."$b"."さん"."<br>";`|
+|`<br>`|改行に使う。|
+|||
+
 
 
