--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -137,9 +137,9 @@ print "💩";
 
 ||意味|
 |-|-|
-|連結演算子|「`.`」を使用すると文字列をつなげることができる。例:`print "こんにちわ"."$b"."さん"."<br>";`|
+|「`.`」|連結演算子。「`.`」を使用すると文字列をつなげることができる。例:`print "こんにちわ"."$b"."さん"."<br>";`|
 |`<br>`|改行に使う。|
-|||
+|`int()`|int関数。小数点以下を切り捨てて、整数部分を返す。例:`$b = 3.14; print int($b);`|
 
 
 
