--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -140,7 +140,7 @@ print "💩";
 |「`.`」|連結演算子。「`.`」を使用すると文字列をつなげることができる。例:`print "こんにちわ"."$b"."さん"."<br>";`|
 |`<br>`|改行に使う。|
 |`int()`|int関数。小数点以下を切り捨てて、整数部分を返す。例:`$b = 3.14; print int($b);`|
-|||
+|`rand()`|rand関数。引数に6が指定された場合、0以上6未満のランダムな値(小数点を含む)が生成される。例:rand(6);|
 
 
 
