--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -141,7 +141,7 @@ print "💩";
 |`<br>`|改行に使う。|
 |`int()`|int関数。小数点以下を切り捨てて、整数部分を返す。例:`$b = 3.14; print int($b);`|
 |`rand()`|rand関数。引数に6が指定された場合、0以上6未満のランダムな値(小数点を含む)が生成される。例:`rand(6);`|
-|`--$a`|`$a = $a - 1`の略。|
+|`--$a`|`$a = $a - 1`の略。`$a--`と書いてもok。|
 
 
 
