--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -4,6 +4,7 @@
 * [文字化け](#文字化け)
 * [計算を行う](#計算を行う)
 * [ランダム表示](#ランダム表示)
+* [ランダム表示の文法](#ランダム表示の文法)
 
 ### Helloperl
 
@@ -133,7 +134,7 @@ print "💩";
 }
 ```
 
-**解説**
+### ランダム表示の文法
 
 ||意味|
 |-|-|
