--- a/Perl/ファイルハンドル.md
+++ b/Perl/ファイルハンドル.md
@@ -1,8 +1,8 @@
 ### ファイルハンドルとは
 
-コネクションを区別するためコネクションに対して付ける名前のこと。
+コネクションを区別するため**コネクションに対して付ける名前のこと。**
 
-コネクションとは、指定したファイルとPerlプログラムの間でやり取りを行うための通信経路(コネクション)のこと。
+コネクションとは、指定したファイルとPerlプログラムの間でやり取りを行うための **通信経路(コネクション)** のこと。
 
 Perlのプログラムでファイルの操作を行う場合、このコネクションを用意する必要がある。
 
