--- a/Perl/ファイルハンドル.md
+++ b/Perl/ファイルハンドル.md
@@ -35,3 +35,13 @@ open(ファイルハンドル名, "モード", "ファイル名");
 close(ファイルハンドル名);
 ```
 
+open関数では、モードを指定することでファイルに対して行う操作を指定することができる。
+
+以下に代表的なモードをピックアップしてみた。
+
+||意味|
+|-|-|
+|`<`|ファイルを読み込む。例:`open(ファイルハンドル, "< ファイル名");`(基本の時と書き方が微妙に違うけど、こっちでもok)|
+|``||
+|``||
+
