--- a/Perl/ファイルハンドル.md
+++ b/Perl/ファイルハンドル.md
@@ -51,10 +51,8 @@ print DATAFILE "書き込みたいデータ";
 
 close(DATAFILE);
 ```
-
-
-
-
+上記のコードでは、  
+まずopen関数を使いデータを書き込みたいファイルを開き、ファイルハンドルを割り当ててから、そのファイルハンドルに対してデータの書き込みを行っている。
 ### open関数とclose関数
 
 **基本**
