--- a/Perl/ファイルハンドル.md
+++ b/Perl/ファイルハンドル.md
@@ -1,6 +1,8 @@
 *目次*
 * [ファイルハンドルとは](#ファイルハンドルとは)
 * [デフォルトのファイルハンドル](#デフォルトのファイルハンドル)
+* [printは省略されている](#printは省略されている)
+* [printでデータを書き込む](#printでデータを書き込む)
 * [open関数とclose関数](#open関数とclose関数)
 ### ファイルハンドルとは
 
