--- a/Perl/コメント.md
+++ b/Perl/コメント.md
@@ -1,3 +1,8 @@
+*目次*
+* [コメントの書き方](#コメントの書き方)
+* [複数行にわたるコメントは記述できない](#複数行にわたるコメントは記述できない)
+* [複数行のコメントの代替機能はある](#複数行のコメントの代替機能はある)
+
 ### コメントの書き方
 
 Perlでコメントを書くには、先頭に`#`を付ける。
