--- a/Perl/ファイルハンドル.md
+++ b/Perl/ファイルハンドル.md
@@ -4,6 +4,7 @@
 * [printは省略されている](#printは省略されている)
 * [printでデータを書き込む](#printでデータを書き込む)
 * [open関数とclose関数](#open関数とclose関数)
+* [アクセスカウンター](#アクセスカウンター)
 ### ファイルハンドルとは
 
 コネクションを区別するため**コネクションに対して付ける名前のこと。**
@@ -88,4 +89,22 @@ open(FILE,">> abc.txt");
 print FILE "\nテストかきこ";
 
 close(FILE);
+```
+
+### アクセスカウンター
+
+```
+#!C:\xampp\perl\bin\perl.exe
+print "Content-type: text/html;charset=utf-8\n\n";
+open(READ, "<log.dat");
+$count=<READ>;　#ファイルを1行だけ読み込む。@count=<READ>;とするとすべての行を読み込み、それぞれの行を配列として返す。
+close (READ);
+
+$count ++;　#close関数で既に先程のファイルハンドルはは無効になっているので、4行目の影響は考えなくてよい。
+
+open(WRITE, ">log.dat");
+print WRITE $count;
+close (WRITE);
+print "あなたは$count人目の訪問者です";
+
 ```
