--- a/PHP/配列 通信方式など.md
+++ b/PHP/配列 通信方式など.md
@@ -3,6 +3,7 @@
 * [連想配列](#連想配列)
 * [多次元配列](#多次元配列)
 * [スーパーグローバル](#スーパーグローバル)
+* [通信方式](#通信方式)
 * [$_GET](#GET)
 * [$_POST](#POST)
 * [$_REQUEST](#REQUEST)
@@ -67,6 +68,8 @@ PHPが自動で用意してくれる配列のこと。
 |$_GET|
 |$_POST|
 |$_REQUEST|
+
+### 通信方式
 
 **前提知識**
 
