--- a/Perl/スコープ.md
+++ b/Perl/スコープ.md
@@ -1,3 +1,14 @@
 ### スコープとは
 
 プログラムの中で変数などが参照可能な範囲のこと。スコープ（scope）は英語で **「範囲」** の意。
+
+### Perlのスコープ
+
+Perlでは以下の3つがスコープになる。
+
+```
+・ファイル（パッケージ）
+・ブロック（{ と } で囲んだ部分）
+・ eval（文字列をPerlスクリプトとして評価する関数）
+```
+
