--- a/Perl/スコープ.md
+++ b/Perl/スコープ.md
@@ -6,9 +6,8 @@
 
 Perlでは以下の3つがスコープになる。
 
-```
-・ファイル（パッケージ）
-・ブロック（{ と } で囲んだ部分）
-・ eval（文字列をPerlスクリプトとして評価する関数）
-```
+* ファイル（パッケージ）
+* ブロック（{ と } で囲んだ部分）
+* eval（文字列をPerlスクリプトとして評価する関数）
+
 
