--- a/Perl/スコープ.md
+++ b/Perl/スコープ.md
@@ -1,6 +1,6 @@
 ### スコープとは
 
-プログラムの中で変数などが参照可能な範囲のこと。スコープ（scope）は英語で **「範囲」** の意。
+プログラムの中で変数などが参照可能な範囲のこと。スコープ（scope）は英語で「範囲」の意。
 
 ### Perlのスコープ
 
