--- a/Perl/スコープ.md
+++ b/Perl/スコープ.md
@@ -10,4 +10,13 @@ Perlでは以下の3つがスコープになる。
 * ブロック（{ と } で囲んだ部分）
 * eval（文字列をPerlスクリプトとして評価する関数）
 
+### レキシカルスコープ
 
+変数を宣言する時は、以下のように先頭に`my`を付けることが多い。この`my`を付けて宣言すると、そのスコープの外からは変数にアクセスできなくなる。
+```
+my $var;
+```
+
+この`my`を付けた時のスコープのことを、別名**レキシカルスコープ**と呼ぶ。
+
+レキシカルは字句(文字や言葉)という意味で、ソースコード上で入力されている位置でスコープが決まることからこう呼ばれる。
