--- a/Perl/スコープ.md
+++ b/Perl/スコープ.md
@@ -1,3 +1,5 @@
+
+
 ### スコープとは
 
 プログラムの中で変数などが参照可能な範囲のこと。スコープ（scope）は英語で「範囲」の意。
@@ -13,6 +15,8 @@ Perlでは以下の3つがスコープになる。
 ### レキシカルスコープ
 
 変数を宣言する時は、以下のように先頭に`my`を付けることが多い。この`my`を付けて宣言すると、そのスコープの外からは変数にアクセスできなくなる。
+
+要するに、変数の有効範囲が限定されるということ。
 ```
 my $var;
 ```
