--- a/Perl/ハッシュ.md
+++ b/Perl/ハッシュ.md
@@ -1,3 +1,8 @@
+*目次*
+* [ハッシュ](#ハッシュ)
+* [ハッシュの宣言](#ハッシュの宣言)
+* [クォーテーションの区別](#クォーテーションの区別)
+
 ### ハッシュ
 
 Perlでは連想配列のことを**ハッシュ**と呼ぶ。
@@ -17,3 +22,29 @@ my %ハッシュ名;
 ```
 $ハッシュ名{キー(添字)} = 値;
 ```
+
+**具体例**
+
+```
+#!C:\xampp\perl\bin\perl.exe
+print "Content-type: text/html;charset=utf-8\n\n";
+
+my %hash = ('名前'=>"最強さん",'特徴'=>"とにかく強い");
+
+print "$hash{'名前'}"."<br>";
+print "$hash{'特徴'}";
+```
+
+実行結果
+```
+最強さん
+とにかく強い
+```
+
+上記のコードでハッシュに値を格納する時に使っている`=>`(アロー演算子と呼ぶ)は「代入する」という意味でok。
+
+### クォーテーションの区別
+
+ハッシュの要素は、添字を`"`と`'`のどちらでも囲むことができる。
+
+使い分けは、PHPと同じように、変数展開をするのかどうかで判断すればよい。
