--- a/Perl/ハッシュ.md
+++ b/Perl/ハッシュ.md
@@ -41,7 +41,7 @@ print "$hash{'特徴'}";
 とにかく強い
 ```
 
-上記のコードでハッシュに値を格納する時に使っている`=>`(アロー演算子と呼ぶ)は「代入する」という意味でok。
+上記のコードでハッシュに値を格納する時に使っている`=>`(アロー演算子と呼ぶ)の意味は「代入する」という認識でok。
 
 ### クォーテーションの区別
 
