--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -31,6 +31,12 @@ HTMLにて下記のようにタグで囲った場合を考える。
 |padding|ボーダーとコンテンツの間にスペースを作る。これは内側の話。一方マージンは外側の話。|
 |margin|ボーダーの外側にスペースを作る事で他の要素との間隔を空ける事ができる。|
 
+### paddingの使い方
+
+```
+padding: 15px 20px;  /* 左のように書くと、上下に15px,左右に20pxの余白が指定できる*/
+```
+
 ### 書く場所
 
 CSSの書く場所は以下の2つ。
