--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -1,6 +1,7 @@
 *目次*
 * [CSSとは](#CSSとは)
 * [要素](#要素)
+* [paddingなどの使い方](#paddingなどの使い方)
 * [書く場所](#書く場所)
 * [CSSファイルの作成手順](#CSSファイルの作成手順)
 * [基本文法](#基本文法)
