Update and rename table.md to テーブル表.md

--- a/マークアップ言語/HTML/テーブル表.md
+++ b/マークアップ言語/HTML/テーブル表.md
@@ -38,3 +38,21 @@
 
 ちなみに `border = "1"`というのは「枠線の太さを1pxに」という意味。ここの数値を変えると枠線の太さが変化する。
 
+### セルを結合する
+
+`rowspan`属性を使用することでセルを結合することができる。
+
+```
+<td rowspan="数値">内容</td>
+```
+
+例えば、数値の部分を「4」とすると4行分のセルを結合できる。
+
+**注意点**
+
+以下のように、`rowspan`属性の下側の`tr`の中に`<td></td>`などの空の要素があると表示がくずれてしまうので注意が必要。
+```
+<td rowspan="数値">内容</td>
+<td></td>
+```
+
