--- a/マークアップ言語/HTML/テーブル表.md
+++ b/マークアップ言語/HTML/テーブル表.md
@@ -56,3 +56,17 @@
 <td></td>
 ```
 
+### 表の枠線を1本にする
+
+`border-collapse`プロパティを使用する。
+
+```
+table{
+ border-collapse:collapse;
+}
+```
+
+`border-collapse`のプロパティの初期値は`separate`(意味:区切る)となっており、これを`collapse`(意味:折りたたむ)に変更することで1本の線にすることができる。
+
+
+
