--- a/マークアップ言語/HTML/テーブル表.md
+++ b/マークアップ言語/HTML/テーブル表.md
@@ -68,5 +68,23 @@ table{
 
 `border-collapse`のプロパティの初期値は`separate`(意味:区切る)となっており、これを`collapse`(意味:折りたたむ)に変更することで1本の線にすることができる。
 
+### レスポンシブでもデザインがくずれないようにする
+
+`box-sizing`プロパティで値を`border-box`に指定すると、**widthの中にpaddingとborderのサイズが含まれる**ためデザインがくずれるの防ぐことができる。
+
+**全称セレクタでの指定がおすすめ**
+
+デザインがくずれるのを防ぐため、以下のように全称セレクタで指定すると良い。
+
+```
+* {
+  box-sizing: border-box;
+}
+```
+
+`*`を全称セレクタといい、全称セレクタを使うと、全ての要素に適用される。
+
+
+
 
 
