--- a/マークアップ言語/HTML/テーブル表.md
+++ b/マークアップ言語/HTML/テーブル表.md
@@ -2,6 +2,10 @@
 * [tableタグとは？](#tableタグとは？)
 * [使い方](#使い方)
 * [テーブル表の作成に使うタグ一覧](#テーブル表の作成に使うタグ一覧)
+* [セルを結合する](#セルを結合する)
+* [表の枠線を1本にする](#表の枠線を1本にする)
+* [レスポンシブでもデザインがくずれないようにする](#レスポンシブでもデザインがくずれないようにする)
+* [](#)
 
 ### tableタグとは？
 
