--- a/JavaScript/基礎知識.md
+++ b/JavaScript/基礎知識.md
@@ -1,7 +1,7 @@
 *目次*
 * [どんな言語？](#どんな言語？)
 * [書き方](#書き方)
-* [クォーテーションの区別について](#シングルクォーテーションとダブルクォーテーションどっち？)
+* [クォーテーションの区別について](#シングルクォーテーションとダブルクォーテーションどっち)
 * [DOMとは](#DOMとは)
 * [ノード](#ノード)
 * [documentオブジェクト](#documentオブジェクト)
