--- a/JavaScript/変数の宣言.md
+++ b/JavaScript/変数の宣言.md
@@ -37,3 +37,7 @@ const object = {
 // オブジェクトそのものは変更できてしまう
 object.key = "新しい値";
 ```
+
+`const`は「再代入できない変数」なのに、オブジェクトの値は変更できるの？と疑問に思ったかもしれない。
+
+これは「変数に再代入すること」と「オブジェクトの値を変更すること」は別ものと考えればよい。
