--- a/JavaScript/変数の宣言.md
+++ b/JavaScript/変数の宣言.md
@@ -41,3 +41,31 @@ object.key = "新しい値";
 `const`は「再代入できない変数」なのに、オブジェクトの値は変更できるの？と疑問に思ったかもしれない。
 
 これは「変数に再代入すること」と「オブジェクトの値を変更すること」は別ものと考えればよい。
+
+### let
+
+`let`は「再代入可能な変数」を宣言する時に使用する。
+
+`let`で宣言した変数に対しては以下のように何度でも値の代入が可能。
+
+```
+let a ="いえーい!";
+console.log("a:" + a);
+
+a = "こんにちわ";
+console.log("a:" + a);
+
+a = "何度でも何度でも♪"
+console.log("a:" + a);
+
+a = "代入できるさ～♪"
+console.log("a:" + a);
+```
+
+実行結果
+```
+a:いえーい! nandemo_2.js:2:9
+a:こんにちわ nandemo_2.js:5:9
+a:何度でも何度でも♪ nandemo_2.js:8:9
+a:代入できるさ～♪
+```
