--- a/JavaScript/変数の宣言.md
+++ b/JavaScript/変数の宣言.md
@@ -69,3 +69,22 @@ a:こんにちわ nandemo_2.js:5:9
 a:何度でも何度でも♪ nandemo_2.js:8:9
 a:代入できるさ～♪
 ```
+
+### letやconstは同じ名前の変数を宣言できない
+
+`let`や`const`を使って同じ名前の変数を宣言しようとすると、以下のようにエラーとなる。
+
+```
+let a = 1;
+let a = 2;
+
+console.log(a);
+```
+
+実行結果
+```
+Uncaught SyntaxError: redeclaration(再宣言) of let anandemo_2.js:2:5note: Previously(以前に) declared(宣言する) at line 1, column 5
+```
+
+
+
