--- a/JavaScript/変数の宣言.md
+++ b/JavaScript/変数の宣言.md
@@ -1,5 +1,10 @@
 JavaScriptで変数を宣言する方法には、`const`、`let`、`ver`の3つがある。
 
+*目次*
+* [const](#const)
+* [constは定数ではない](#constは定数ではない)
+* [letやconstは同じ名前の変数を宣言できない](#letやconstは同じ名前の変数を宣言できない)
+
 ### const
 
 「再代入できない変数」を宣言する時に使用する。英語のconstantの略。
