--- a/JavaScript/変数の宣言.md
+++ b/JavaScript/変数の宣言.md
@@ -80,15 +80,26 @@ a:代入できるさ～♪
 `let`や`const`を使って同じ名前の変数を宣言しようとすると、以下のようにエラーとなる。
 
 ```
+// letで宣言
 let a = 1;
 let a = 2;
+
+console.log(a);
+
+// constで宣言
+const a = 1;
+const a = 2;
 
 console.log(a);
 ```
 
 実行結果
 ```
+// letの場合
 Uncaught SyntaxError: redeclaration(再宣言) of let anandemo_2.js:2:5note: Previously(以前に) declared(宣言する) at line 1, column 5
+
+// constの場合
+Uncaught SyntaxError: redeclaration of const anandemo_2.js:2:7note: Previously declared at line 1, column 7
 ```
 
 
