--- a/JavaScript/変数の宣言.md
+++ b/JavaScript/変数の宣言.md
@@ -102,5 +102,23 @@ Uncaught SyntaxError: redeclaration(再宣言) of let anandemo_2.js:2:5note: Pre
 Uncaught SyntaxError: redeclaration of const anandemo_2.js:2:7note: Previously declared at line 1, column 7
 ```
 
+#### 一方varだと普通にできる
+
+```
+var a = 1;
+var a = 2;
+
+console.log(a);
+```
+
+以下のように問題なく実行できた。
+
+```
+2
+```
+
+
+
+
 
 
