--- a/JavaScript/変数の宣言.md
+++ b/JavaScript/変数の宣言.md
@@ -117,6 +117,10 @@ console.log(a);
 2
 ```
 
+### 変数はconstかletを使うのが望ましい
+
+以上見てきたような特質から、変数を宣言する時は、まず`const`が使えないかを検討し、できない場合に`let`を使うことが推奨されている。。
+
 
 
 
