--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -2,7 +2,7 @@
 * [オブジェクトとは](#オブジェクトとは)
 * [プロパティとは](#プロパティとは)
 * [メソッド](#メソッド)
-* [](#)
+* [オブジェクトの定義方法](#オブジェクトの定義方法)
 
 ### オブジェクトとは
 
@@ -17,3 +17,20 @@
 メソッドとは、プロパティの値が関数になった時の呼び名。
 
 プロパティとメソッドの違いは、値の部分が関数であるかどうかでしかない。
+
+### オブジェクトの定義方法
+
+```
+const obj = { 名前1:値,　//プロパティ1
+              名前2:値,  //プロパティ2
+
+              名前3:関数 //メソッド 
+}
+```
+
+**ルール**
+
+* オブジェクトの`{}`のことをオブジェクトリテラルという。
+* 名前と値を`:`(コロン)で区切る。
+* プロパティを複数定義する時は、 `,`(カンマ)で区切る。
+* プロパティの値には、変数を指定することもできる。
