--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -21,7 +21,9 @@
 ### オブジェクトの定義方法
 
 ```
-const obj = { 名前1:値,　//プロパティ1
+// constを使ってオブジェクトを宣言している
+
+const オブジェクト名 = { 名前1:値,　//プロパティ1　
               名前2:値,  //プロパティ2
 
               名前3:関数 //メソッド 
