--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -3,6 +3,7 @@
 * [プロパティとは](#プロパティとは)
 * [メソッド](#メソッド)
 * [オブジェクトの定義方法](#オブジェクトの定義方法)
+* [利用方法](#利用方法)
 
 ### オブジェクトとは
 
@@ -36,3 +37,13 @@ const オブジェクト名 = { 名前1:値,　//プロパティ1　
 * 名前と値を`:`(コロン)で区切る。
 * プロパティを複数定義する時は、 `,`(カンマ)で区切る。
 * プロパティの値には、変数を指定することもできる。
+
+### 利用方法
+
+オブジェクトの利用方法には以下の2つがある。
+
+```
+オブジェクト名.プロパティ名 //ドット記法
+
+オブジェクト名['プロパティ名']　//ブラケット記法。bracketは英語で「角括弧(かくかっこ)などの括弧」の意味がある。
+```
