--- a/JavaScript/変数の宣言.md
+++ b/JavaScript/変数の宣言.md
@@ -79,7 +79,7 @@ a:代入できるさ～♪
 
 ### letやconstは同じ名前の変数を宣言できない
 
-`let`や`const`を使って同じ名前の変数を宣言しようとすると、以下のようにエラーとなる。
+`let`や`const`を使って同じ名前の変数を再び宣言しようとすると、以下のようにエラーとなる。
 
 ```
 // letで宣言
