--- a/JavaScript/変数の宣言.md
+++ b/JavaScript/変数の宣言.md
@@ -121,7 +121,7 @@ console.log(a);
 
 ### 変数はconstかletを使うのが望ましい
 
-以上見てきたような特質から、変数を宣言する時は、まず`const`が使えないかを検討し、できない場合に`let`を使うことが推奨されている。。
+以上見てきたような特質から、変数を宣言する時は、まず`const`が使えないかを検討し、できない場合に`let`を使うことが推奨されている。
 
 
 
