--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -27,7 +27,7 @@
 const オブジェクト名 = { 名前1:値,　//プロパティ1　
               名前2:値,  //プロパティ2
 
-              名前3:関数 //メソッド 
+              名前3:関数 //メソッド。関数名は不要。functionを使うか、アロー関数が使用可能
 }
 ```
 
