--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -47,3 +47,26 @@ const オブジェクト名 = { 名前1:値,　//プロパティ1　
 
 オブジェクト名['プロパティ名']　//ブラケット記法。bracketは英語で「角括弧(かくかっこ)などの括弧」の意味がある。
 ```
+
+#### ドット記法
+
+```
+// constを使用してbluearchiveオブジェクトを定義
+const bluearchive = {
+  name:"shiroco",
+  academy:"ABYDOS",
+  grade:"2年",
+  voice:function(){
+   document.write("備えあれば憂いなし。シンプルなルールだ");
+ } 
+}
+
+document.write(bluearchive.name + "<br>");　//bluearchiveオブジェクトのnameプロパティを画面に表示
+bluearchive.voice();　//bluearchiveオブジェクトのvoiceメソッドを呼び出し
+```
+
+実行結果
+```
+shiroco
+備えあれば憂いなし。シンプルなルールだ 
+```
