--- a/JavaScript/オブジェクトとは.md
+++ b/JavaScript/オブジェクトとは.md
@@ -38,6 +38,9 @@ const オブジェクト名 = { 名前1:値,　//プロパティ1　
 * プロパティを複数定義する時は、 `,`(カンマ)で区切る。
 * プロパティの値には、変数を指定することもできる。
 
+**注意点**
+プロパティの終わりに`;`は不要。付けるとエラーがでる。
+
 ### 利用方法
 
 オブジェクトの利用方法には以下の2つがある。
