--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -161,12 +161,12 @@ ulはUnordered List(順番を考慮しないリスト)の略で、liはList Item
 
 **注意点**
 
-CSSで装飾を加える時は、必ず先頭に「.」を付けることに注意する。
+CSSで装飾を加える時は、以下のように要素とクラス名を「.」でつなげる。。
 
 **具体例**
 
 ```
-.paon {
+p.paon {
 color: blue;
 } 
 ```
