--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -161,7 +161,9 @@ ulはUnordered List(順番を考慮しないリスト)の略で、liはList Item
 
 **注意点**
 
-CSSで装飾を加える時は、以下のように要素とクラス名を「.」でつなげる。。
+CSSで装飾を加える時は、以下のように要素とクラス名を「.」でつなげる。
+
+クラス名をつけた場合のCSSと、付けない状態でのCSSをごっちゃにして`.p`とpの前に「.」をつけてしまうとうまくいかないので注意。
 
 **具体例**
 
