--- a/マークアップ言語/CSS/ページ上部の空白を消す.md
+++ b/マークアップ言語/CSS/ページ上部の空白を消す.md
@@ -1,3 +1,9 @@
+*目次*
+* [原因の調査](#原因の調査)
+* [対処](#対処)
+* [もっと良い方法](#もっと良い方法)
+* [bodyのデフォルトのmargin](#bodyのデフォルトのmargin)
+
 以下のCSSリセットを適用したのに、p要素の上側に空白が表示されるという事態が発生。
 
 ```
@@ -35,4 +41,12 @@ p{
  padding:0;
 }
 ```
+
+### bodyのデフォルトのmargin
+
+body要素にデフォルトで、上下左右に8pxのmarginが設定されている。
+
+これは、user agent stylesheetというブラウザが各要素にたいしてデフォルトで適用しているCSSが原因。
+
+これをリセットして、作業環境を整えるために生まれたのが「リセットCSS」。
 
