--- a/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
+++ b/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
@@ -3,4 +3,6 @@
 要素はについて仕様書CSS2.1の記述は以下の通り。
 
 >Element
-    (An SGML term, see [ISO8879].) The primary syntactic constructs of the document language. Most CSS style sheet rules use the names of these elements (such as P, TABLE, and OL in HTML) to specify how the elements should be rendered. 
+    (An SGML term, see [ISO8879].) The primary syntactic constructs of the document language. Most CSS style sheet rules use the names of these elements (such as P, TABLE, and OL in HTML) to specify how the elements should be rendered.
+訳:
+    （SGML用語。[ISO8879]を参照。）文書言語の最も重要な構文上の構成物。ほとんどのCSSスタイルシートの規則は、要素のレンダリングされるべき方法を指定するために、（HTMLにおけるP、TABLE、OLなどの）要素の名前を使用する。 
