--- a/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
+++ b/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
@@ -1,8 +1,23 @@
 ### 要素とは
 
-要素はについて仕様書CSS2.1の記述は以下の通り。
+要素について仕様書CSS2.1の記述は以下の通り。
 
 >Element
     (An SGML term, see [ISO8879].) The primary syntactic constructs of the document language. Most CSS style sheet rules use the names of these elements (such as P, TABLE, and OL in HTML) to specify how the elements should be rendered.
 >
 >訳:（SGML用語。[ISO8879]を参照。）文書言語の最も重要な構文上の構成物。ほとんどのCSSスタイルシートの規則は、要素のレンダリングされるべき方法を指定するために、（HTMLにおけるP、TABLE、OLなどの）要素の名前を使用する。 
+
+要素とは、**文書言語の構成物。** つまり、文書言語を構成しているパーツのこと。
+
+要素は具体的には、p要素,table要素,ol要素などがある。
+
+### 文書言語とは
+
+文書言語について仕様書CSS2.1の記述は以下の通り。
+
+>Document language
+    The encoding language of the source document (e.g., HTML, XHTML, or SVG). CSS is used to describe the presentation of document languages and CSS does not change the underlying semantics(意味) of the document languages.
+>
+>訳:文書言語
+     ソースドキュメントのエンコード言語 (HTML、XHTML、SVG など)。 CSS は文書言語の表現を記述するために使用され、CSS は文書言語の基礎となるセマンティクスを変更しません。
+
