--- a/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
+++ b/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
@@ -1,3 +1,8 @@
+*目次*
+* [要素とは](#要素とは)
+* [文書言語とは](#文書言語とは)
+* [要素と文書言語のまとめ](#要素と文書言語のまとめ)
+
 ### 要素とは
 
 要素について仕様書CSS2.1の記述は以下の通り。
@@ -22,7 +27,15 @@
      ソースドキュメントのエンコード言語 (HTML、XHTML、SVG など)。 CSS は文書言語の表現を記述するために使用され、CSS は文書言語の基礎となるセマンティクスを変更しません。
 
 
-文書言語とは、ソースドキュメントのエンコード言語のことで、具体的にはHTMLなどのこと。
+文書言語とは、ソースドキュメントのエンコード言語のことで、**具体的にはHTMLなどのこと。**
 
 `エンコード（encode）とは、情報を一定の規則に従ってデータに置き換えて記録すること。`なので、ソースドキュメントのエンコード言語とは、つまり、元となる文書(ソースドキュメント)を一定の規則に従って置き換えて記録するための言語と解釈できる。その具体例がHTML。
+
+### 要素と文書言語のまとめ
+
+要素とは、文書言語(HTMLなど)の構成物のこと。
+
+
+
+
 
