--- a/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
+++ b/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
@@ -35,7 +35,33 @@
 
 要素とは、文書言語(HTMLなど)の構成物のこと。
 
+### ボックスモデル
 
+ボックスモデルについて仕様書CSS2.1の記述は以下の通り。
 
+>The CSS box model describes the rectangular boxes that are generated for elements in the document tree and laid out according to the visual formatting model.
+>
+>CSS ボックスモデルは、ドキュメントツリー内の要素に対して生成され、ビジュアルフォーマットモデルに従ってレイアウトされる長方形のボックスを記述します。
 
+#### ビジュアルフォーマットモデル
+
+ビジュアルフォーマットモデルについて仕様書CSS2.1の記述は以下の通り。
+
+>This chapter and the next describe the visual formatting model: how user agents process the document tree for visual media.
+>
+>この章と次の章では、ビジュアルフォーマットモデル、つまりユーザーエージェントがビジュアルメディアのドキュメントツリーを処理する方法について説明します。
+
+ビジュアルフォーマットモデルとは、UA(ブラウザ)がビジュアルメディアのドキュメントツリーを処理する方法のこと。
+
+#### ドキュメントツリー
+
+ドキュメントツリーについて仕様書CSS2.1の記述は以下の通り。
+
+> Document tree
+    The tree of elements encoded in the source document. Each element in this tree has exactly one parent, with the exception of the root element, which has none.
+>
+> ドキュメントツリー
+     ソースドキュメント内でエンコードされた要素のツリー。 このツリー内の各要素には、親がまったくないルート要素を除き、親が1 つだけあります。
+
+ ソースドキュメント内でエンコードされた要素のツリー。つまり、HTMLによって記述された要素のツリー。
 
