--- a/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
+++ b/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
@@ -43,6 +43,7 @@
 >
 >CSS ボックスモデルは、ドキュメントツリー内の要素に対して生成され、ビジュアルフォーマットモデルに従ってレイアウトされる長方形のボックスを記述します。
 
+### ボックスモデルの説明の用語
 #### ビジュアルフォーマットモデル
 
 ビジュアルフォーマットモデルについて仕様書CSS2.1の記述は以下の通り。
@@ -64,4 +65,9 @@
      ソースドキュメント内でエンコードされた要素のツリー。 このツリー内の各要素には、親がまったくないルート要素を除き、親が1 つだけあります。
 
  ソースドキュメント内でエンコードされた要素のツリー。つまり、HTMLによって記述された要素のツリー。
+
+### ボックスモデルのまとめ
+
+HTMLの要素はツリー構造をとり、そのツリー内の要素ごとに、CSSボックスモデルが生成される。
+
 
