--- a/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
+++ b/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
@@ -41,7 +41,7 @@
 
 >The CSS box model describes the rectangular boxes that are generated for elements in the document tree and laid out according to the visual formatting model.
 >
->CSS ボックスモデルは、ドキュメントツリー内の要素に対して生成され、ビジュアルフォーマットモデルに従ってレイアウトされる長方形のボックスを記述します。
+>CSS ボックスモデルは、ドキュメントツリー内の要素に対して生成され、ビジュアルフォーマットモデルに従ってレイアウトされる長方形のボックスを説明します。
 
 ### ボックスモデルの説明の用語
 #### ビジュアルフォーマットモデル
@@ -68,6 +68,14 @@
 
 ### ボックスモデルのまとめ
 
-HTMLの要素はツリー構造をとり、そのツリー内の要素ごとに、CSSボックスモデルが生成される。
+HTMLの要素はツリー構造をとり、そのツリー内の各要素ごとに、長方形のボックスが生成される。
+
+この長方形のボックスは、ビジュアルフォーマットモデルに従ってレイアウトされる。
+
+そして、CSSボックスモデルはこの長方形のボックスについて説明する。
+
+ビジュアルフォーマットモデルの具体例として、 Containing blocks(邦訳では、包含ブロックと訳されている)がある。
+
+
 
 
