--- a/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
+++ b/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
@@ -59,6 +59,28 @@
 
 ビジュアルフォーマットモデルとは、UA(ブラウザ)がビジュアルメディアのドキュメントツリーを処理する方法のこと。
 
+つまり、ドキュメントツリーのビジュアルメディア(ディスプレイに表示される見た目)に関わる部分を処理する方法のことと解釈できる。
+
+#### ビジュアルメディア
+
+visualの意味をgoogle翻訳の辞書で引くと以下の記載がある。
+
+>a picture, piece of film, or display used to illustrate or accompany something.
+>
+>何かを説明したり付随したりするために使用される写真、フィルム、またはディスプレイ。
+
+つまり、ディスプレイのことと解釈できる。
+
+もうひとつ mediaの意味を同じように引いてみると、以下の記載がある。
+
+>plural form of medium.
+>
+>媒体の複数形。
+
+媒体は、コトバンクによると「人々に情報を伝達するための手段」といった意味がある。
+
+以上の意味を合わせると、visual mediaとは、「ディスプレイを通してユーザーに情報を伝えるもの」と解釈できる。
+
 #### ドキュメントツリー
 
 ドキュメントツリーについて仕様書CSS2.1の記述は以下の通り。
