--- a/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
+++ b/マークアップ言語/CSS/仕様書からブロック整形コンテキスト周りを読み解く.md
@@ -59,7 +59,9 @@
 
 ビジュアルフォーマットモデルとは、UA(ブラウザ)がビジュアルメディアのドキュメントツリーを処理する方法のこと。
 
-つまり、ビジュアルフォーマットモデルは、ドキュメントツリーのビジュアルメディア(ディスプレイに表示される見た目)に関わる部分を処理する方法のことと解釈できる。
+つまり、ビジュアルフォーマットモデルは、**ドキュメントツリーのビジュアルメディア(ディスプレイに表示される見た目)に関わる部分を処理する方法のこと**と解釈できる。
+
+ちなみに、ビジュアルメディアの詳しい意味については、以下で説明しているので参考にされたし。
 
 #### ビジュアルメディア
 
