--- a/SPARQL/リンク先のデータを表示.md
+++ b/SPARQL/リンク先のデータを表示.md
@@ -16,3 +16,29 @@ WHERE {
 ```
 http://ja.dbpedia.org/resource/オスカープロモーション
 ```
+
+### やりたいこと
+
+実行結果のリンクをクリックした先にある、オスカープロモーションの概要を表示したい。step2へ進む。
+
+### step2
+step1のコードを以下のように書き換えてあげると表示できる。
+
+```
+PREFIX dbpj: <http://ja.dbpedia.org/resource/>
+PREFIX dbp-owl: <http://dbpedia.org/ontology/>
+PREFIX dbp-prop: <http://ja.dbpedia.org/property/>
+
+SELECT ?abstract
+WHERE {
+    dbpj:上戸彩 dbp-prop:事務所 ?o . 
+    ?o dbp-owl:abstract ?abstract .
+}
+```
+
+**実行結果**
+```
+"株式会社オスカープロモーション（Oscar Promotion Co.ltd.）は、東京都港区に本社を置く日本の芸能事務所。"@ja
+```
+
+
