--- a/SPARQL/リンク先のデータを表示.md
+++ b/SPARQL/リンク先のデータを表示.md
@@ -19,7 +19,7 @@ http://ja.dbpedia.org/resource/オスカープロモーション
 
 ### やりたいこと
 
-実行結果のリンクをクリックした先にある、オスカープロモーションの概要を表示したい。step2へ進む。
+実行結果のリンクをクリックした先にあるオスカープロモーションの概要を表示したい。step2へ進む。
 
 ### step2
 step1のコードを以下のように書き換えてあげると表示できる。
