--- a/SPARQL/日本の小説家の名前と説明_抽出.md
+++ b/SPARQL/日本の小説家の名前と説明_抽出.md
@@ -17,3 +17,5 @@ WHERE {
 
 追記  
 ?birthNameのほうだと名前が一通りしかないから、こっちを使ったほうが良いな。
+
+あと小説家の名前にもれがあったのは、1ページに表示できる件数の限りがあるのか、もしくはdbpediaのほうに情報が入っていないのが原因?
