--- a/SPARQL/日本の小説家の名前と説明_抽出.md
+++ b/SPARQL/日本の小説家の名前と説明_抽出.md
@@ -15,7 +15,8 @@ WHERE {
 
 一応表示されたけど、重複が多すぎてデータとして使いものにならない。あとで対策を考えよう。
 
-**日本の小説家一覧のページ**  https://ja.dbpedia.org/page/%E6%97%A5%E6%9C%AC%E3%81%AE%E5%B0%8F%E8%AA%AC%E5%AE%B6%E4%B8%80%E8%A6%A7
+**日本の小説家一覧のページ**  
+https://ja.dbpedia.org/page/%E6%97%A5%E6%9C%AC%E3%81%AE%E5%B0%8F%E8%AA%AC%E5%AE%B6%E4%B8%80%E8%A6%A7
 
 **追記**  
 ?birthNameのほうだと名前が一通りしかないから、こっちを使ったほうが良いな。
