--- a/SPARQL/日本の小説家の名前と説明_抽出.md
+++ b/SPARQL/日本の小説家の名前と説明_抽出.md
@@ -22,3 +22,23 @@ https://ja.dbpedia.org/page/%E6%97%A5%E6%9C%AC%E3%81%AE%E5%B0%8F%E8%AA%AC%E5%AE%
 ?birthNameのほうだと名前が一通りしかないから、こっちを使ったほうが良いな。
 
 あと小説家の名前にもれがあったのは、1ページに表示できる件数の限りがあるのか、もしくはdbpediaのほうに情報が入っていないのが原因?
+
+### 修正版
+
+`?label`と`?almaMater`を利用してみた。
+
+今度はうまくいった。小説家の名前と最終学歴一覧が表示される。上記で見られたもれは今度はなかった。
+
+```
+PREFIX dbpj: <http://ja.dbpedia.org/resource/>
+PREFIX dbp-owl: <http://dbpedia.org/ontology/>
+PREFIX dbp-prop: <http://ja.dbpedia.org/property/>
+PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#>
+
+SELECT DISTINCT ?label, ?almaMater
+WHERE {
+    dbpj:日本の小説家一覧 dbp-owl:wikiPageWikiLink ?o .
+    ?o rdfs:label ?label;
+    dbp-prop:almaMater ?almaMater .
+}
+```
