--- a/SPARQL/日本の小説家の名前と説明_抽出.md
+++ b/SPARQL/日本の小説家の名前と説明_抽出.md
@@ -27,7 +27,7 @@ https://ja.dbpedia.org/page/%E6%97%A5%E6%9C%AC%E3%81%AE%E5%B0%8F%E8%AA%AC%E5%AE%
 
 `?label`と`?almaMater`を利用してみた。
 
-今度はうまくいった。小説家の名前と最終学歴一覧が表示される。上記で見られたもれは今度はなかった。
+今度はうまくいった。小説家の名前と最終学歴一覧が表示される。上記で見られたもれは今度は見受けられなかった。
 
 ```
 PREFIX dbpj: <http://ja.dbpedia.org/resource/>
