--- a/マークアップ言語/HTML/実践編/ブログタイトルにロゴ画像を設定する.md
+++ b/マークアップ言語/HTML/実践編/ブログタイトルにロゴ画像を設定する.md
@@ -15,6 +15,12 @@
 ### 解説
 
 **手順**  
-**html**
+**・html**
 
 ①pタグにわかりやすい名前を付ける。
+②imgタグで画像を設定。この時alt属性には「ブログ名」を記述する。
+③imgタグにリンクを付与するために、`<a href="*">`タグで囲む。
+
+**・css**  
+
+①ロゴ画像のアスペクト比をもとに、ちょうどよいサイズに調整する。上記の例の場合、もともとの画像サイズは`1500x500`だったのでアスペクト比は`3:1`。
