--- a/マークアップ言語/HTML/実践編/ブログタイトルにロゴ画像を設定する.md
+++ b/マークアップ言語/HTML/実践編/ブログタイトルにロゴ画像を設定する.md
@@ -23,7 +23,8 @@
 
 **・css**  
 
-ロゴ画像のアスペクト比をもとに、ちょうどよいサイズに調整する。上記の例の場合、もともとの画像サイズは`1500x500`だったのでアスペクト比は`3:1`。
+①ロゴ画像のアスペクト比を求める。「アスペクト比 計算」などでググって出てくるアスペクト比を計算してくれるサイトを使うと便利。  
+②ロゴ画像のアスペクト比をもとに、ちょうどよいサイズに調整する。上記の例の場合、もともとの画像サイズは`1500x500`だったのでアスペクト比は`3:1`。
 
 アスペクト比にしたがうことで、もともとの画像の比率を維持したまま縮小したり拡大したりできる。
 
@@ -34,3 +35,4 @@
 |https://allabout.co.jp/gm/gc/400630/|pタグでimgを設定|
 |https://bties.co.jp/homepagenopro/html/img_link.html|imgタグにリンクを付与|
 |https://vanillaice000.blog.fc2.com/blog-entry-569.html|ロゴ画像のalt属性には「ブログタイトル」を|
+|https://aspect.arc-one.jp/|アスペクト比計算ツール|
