--- a/マークアップ言語/HTML/実践編/ブログタイトルにロゴ画像を設定する.md
+++ b/マークアップ言語/HTML/実践編/ブログタイトルにロゴ画像を設定する.md
@@ -23,7 +23,7 @@
 
 **・css**  
 
-①ロゴ画像のアスペクト比を求める。「アスペクト比 計算」などでググって出てくるアスペクト比を計算してくれるサイトを使うと便利。  
+①ロゴ画像のアスペクト比を求める。アスペクト比を計算してくれるサイトを使うと便利。(「アスペクト比 計算」などでググると出てくる)  
 ②ロゴ画像のアスペクト比をもとに、ちょうどよいサイズに調整する。上記の例の場合、もともとの画像サイズは`1500x500`だったのでアスペクト比は`3:1`。
 
 アスペクト比にしたがうことで、もともとの画像の比率を維持したまま縮小したり拡大したりできる。
