--- a/マークアップ言語/HTML/実践編/ブログタイトルにロゴ画像を設定する.md
+++ b/マークアップ言語/HTML/実践編/ブログタイトルにロゴ画像を設定する.md
@@ -19,12 +19,12 @@
 
 ①pタグにわかりやすい名前を付ける。  
 ②imgタグで画像を設定。この時alt属性には「ブログ名」を記述する。  
-③imgタグにリンクを付与するために、`<a href="*">`タグで囲む。
+③imgタグにリンクを付与するためにimgタグを、`<a href="*">`タグで囲む。
 
 **・css**  
 
 ①ロゴ画像のアスペクト比を求める。アスペクト比を計算してくれるサイトを使うと便利。(「アスペクト比 計算」などでググると出てくる)  
-②ロゴ画像のアスペクト比をもとに、ちょうどよいサイズに調整する。上記の例の場合、もともとの画像サイズは`1500x500`だったのでアスペクト比は`3:1`。
+②求めたアスペクト比をもとに、ちょうどよいサイズに調整する。上記の例の場合、もともとの画像サイズは`1500x500`だったのでアスペクト比は`3:1`。
 
 アスペクト比にしたがうことで、もともとの画像の比率を維持したまま縮小したり拡大したりできる。
 
