--- a/マークアップ言語/HTML/実践編/ブログタイトルにロゴ画像を設定する.md
+++ b/マークアップ言語/HTML/実践編/ブログタイトルにロゴ画像を設定する.md
@@ -2,7 +2,7 @@
 ```
 <!--ヘッダー画像リンク-->
 <p class="resize-image">
-<a href ="https://dominor.blog.jp/"><img src ="https://livedoor.blogimg.jp/warotaaa-9smq43vi/imgs/6/f/6f320148.jpg?v=20240819153015" alt="ドマイナー放送局"></a>
+<a href ="*"><img src ="*" alt="*"></a>
 </p>
 <!--ヘッダー画像リンク-->
 ```
