--- a/JavaScript/整数をランダムに生成.md
+++ b/JavaScript/整数をランダムに生成.md
@@ -2,5 +2,5 @@
 ```
 Math.floor(Math.random() * (n + 1))
 ```
-上記のコードで「0~n」までを生成することができるが、`Math.random()`は「0~1未満」の数字をランダムに生成することから、生成結果が「0」になってしまうことがある。  
+上記のコードで「0からn」までを生成することができるが、`Math.random()`は「0から1未満」の数字をランダムに生成することから、生成結果が「0」になってしまうことがある。  
 例えば、n=2にしたとしても掛ける値が`0.00000000000001`だとしたら`0.00000000000001 * 3 = 0.00000000000003 `となって`floor`が小数点以下を切り捨てなので最終的な値は「0」になってしまう。
