--- a/JavaScript/整数をランダムに生成.md
+++ b/JavaScript/整数をランダムに生成.md
@@ -16,4 +16,4 @@ Math.floor(Math.random() * (b + 1 - a)) + a
 
 上記のコードで「aからb」までの整数を生成することができる。  
 最後に「+a」をしているのは基本で解説したように「0.00000000000001」のようなめっちゃ小さい数字になった時に「0」になってしまうのを防ぐために、生成したい値のうち最小の値を足している。  
-そして「-a」としているのはその逆に「0.9」などのようにでかい値になった時に「+a」の分だけ大きくなりすぎるのを防ぐため。例えば、「b=6, a=1」の場合で、もし「-a」がなかったらどうなるかを考えてみる。`Math.random() `が「0.9」を生成した場合、「7 * 0.9 = 6.3」となるが、その後「+1」されるため「1から6」の数字を生成したいのに「7」の数字を生成してしまうという事態が起きてしまう。なので「-a」をしてあげる必要がある。
+そして「-a」としているのはその逆に「0.9」などのようにでかい値になった時に「+a」の分だけ大きくなりすぎるのを防ぐため。例えば、「b=6, a=1」の場合で、もし「-a」がなかったらどうなるかを考えてみる。`Math.random() `が「0.9」を生成した場合、「7 * 0.9 = 6.3」となるが、その後「+1」されて「6 + 1 = 7」となって「1から6」の数字を生成したいのに「7」の数字を生成してしまうという事態が起きてしまう。なので「-a」をしてあげる必要がある。
