--- a/JavaScript/戻り値と引数は数学で例えられる.md
+++ b/JavaScript/戻り値と引数は数学で例えられる.md
@@ -20,10 +20,17 @@ const result = hikisu(100);
 console.log(result);
 ```
 
+
 コンソール画面の出力結果
 ```
 101
 ```
+
+**疑問に思った点**
+
+上記のコードにおける`(a)`のように関数の引数を新たな定義する時、その引数は変数を宣言する時のようにあらかじめ宣言しなくても良いのか？と疑問に思ったけど、  
+普通にそういったことは考えなくても大丈夫っぽいな。
+
 
 ### 参考
 https://lorem-co-ltd.com/js-function-basic/
