--- a/JavaScript/戻り値と引数は数学で例えられる.md
+++ b/JavaScript/戻り値と引数は数学で例えられる.md
@@ -28,7 +28,7 @@ console.log(result);
 
 **疑問に思った点**
 
-上記のコードにおける`(a)`のように関数の引数を新たな定義する時、その引数は変数を宣言する時のようにあらかじめ宣言しなくても良いのか？と疑問に思ったけど、  
+上記のコードにおける`(a)`のように関数の引数を新たな定義する時、その引数は、変数を宣言する時のようにあらかじめ宣言しなくても良いのか？と疑問に思ったけど、  
 普通にそういったことは考えなくても大丈夫っぽいな。
 
 
