--- a/JavaScript/戻り値と引数は数学で例えられる.md
+++ b/JavaScript/戻り値と引数は数学で例えられる.md
@@ -8,7 +8,7 @@
 
 引数は、y=2xにおける「x」のようなもの。
 
-つまり、自由に値を代入できるやつってことか。(0以上3以下などのように制限がかかる場合を除く)
+つまり、自由に値を代入できる入れ物ってことか。(0以上3以下などのように制限がかかる場合を除いて)
 
 **具体例**
 ```
