--- a/JavaScript/わかりやすい学習サイト.md
+++ b/JavaScript/わかりやすい学習サイト.md
@@ -1,11 +1,27 @@
+### メイン
 ・JavaScript基礎 - ホームページ入門サイト
 
 https://beginners-hp.com/javascript/
 
 初心者向けに基本から応用までひと通り解説してくれている。たいへんわかりやすい。
 
+### 辞書として
 ・JavaScript Primer
 
 https://jsprimer.net/
 
 書籍のweb版。全部無料で公開されている。詳しく解説されているのでもっと詳しく知りたいと思った時に読むなどの辞書的な使い方に良い。
+
+### その他
+
+・【2024年版/初心者向け】HTMLのbuttonタグとは？onclick属性でリンクを付ける方法について初心者向けに解説！
+https://mteam.jp/column/10169/
+
+buttonタグにid属性を付与してjavascriptで操作するやり方など、buttonタグのjavascriptと組み合わせた応用的な使い方まで初心者でもわかるように詳しく解説されていてとても良い。
+
+・JavaScriptの矢印「=>」とは？ 〜これは、アロー関数というものです。
+https://fuuno.net/web02/arrow/arrow.html
+
+アロー関数についてわかりやすい解説。
+
+あと、以下のページにあるググったのにその周辺にある記述がわからずに余計にわからないことが増えてしまったという部分にめっちゃ共感w 特にJavascriptは終始これだわww
