--- a/JavaScript/わかりやすい学習サイト.md
+++ b/JavaScript/わかりやすい学習サイト.md
@@ -12,6 +12,14 @@ https://jsprimer.net/
 
 書籍のweb版。全部無料で公開されている。詳しく解説されているのでもっと詳しく知りたいと思った時に読むなどの辞書的な使い方に良い。
 
+・サバイバルTypeScript
+
+https://typescriptbook.jp/
+
+TypeScriptの解説サイトだけど、javascriptの基本事項も解説されていて特に関数式についてのページがわかりやくて参考になった。
+
+
+
 ### その他
 
 ・【2024年版/初心者向け】HTMLのbuttonタグとは？onclick属性でリンクを付ける方法について初心者向けに解説！
