--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -93,8 +93,8 @@ HTMLで文字エンコードを指定するには、head内に以下のように
 
 **解説**
 ||意味|
-|---|---|
-|てすと|てすとああああ|
+|-|-|
+|metaタグ|ブラウザや検索エンジンに情報を伝えるためのタグ。上記の文字エンコードの他にはサイトや記事の説明文を記載する時などにも使用する。|
 
 
 ### 計算を行う
