--- a/Perl/チュートリアル.md
+++ b/Perl/チュートリアル.md
@@ -96,6 +96,9 @@ HTMLで文字エンコードを指定するには、head内に以下のように
 |---|-|
 |metaタグ|ブラウザや検索エンジンに情報を伝えるためのタグ。上記の例で挙げた文字エンコードの他には、サイトや記事の説明文を記載する時などにも使用する。|
 
+追記 2024.11.07
+
+JavaScriptの文字化けもこのやり方で対処できた。まあ同じブラウザ上で動く言語なんだから当たり前っちゃああたりまえ
 
 ### 計算を行う
 
