--- a/JavaScript/関数式.md
+++ b/JavaScript/関数式.md
@@ -11,3 +11,24 @@
 ```
 
 
+### 2通りの関数式の書き方
+
+||種類|
+|-|-|
+|①|関数の宣言と変数に代入を「別々」に行う|
+|②|関数の宣言と変数への代入を「同時」に行う|
+
+**①別々ver**
+
+JavaScript
+```
+function unco() {
+  alert("関数unco「俺を呼んだか？」");
+}
+
+
+const myFunc = unco;　//関数uncoを変数myFuncに代入している。書式は`const 変数名 = 関数名;`
+```
+
+
+
