--- a/JavaScript/関数式.md
+++ b/JavaScript/関数式.md
@@ -30,5 +30,16 @@ function unco() {
 const myFunc = unco;　//関数uncoを変数myFuncに代入している。書式は`const 変数名 = 関数名;`
 ```
 
+HTML
+```
+<body>
+<script src="sample.js"></script>
+
+<button type="button" onclick="myFunc()">ポチッ</button>　//onclicの部分に「変数名()」を入力している
+
+</body>
+
+```
+
 
 
