--- a/JavaScript/関数式.md
+++ b/JavaScript/関数式.md
@@ -27,7 +27,7 @@ function unco() {
 }
 
 
-const myFunc = unco;　//関数uncoを変数myFuncに代入している。書式は`const 変数名 = 関数名;`
+const myFunc = unco;　//ここで関数uncoを変数myFuncに代入している。書式は`const 変数名 = 関数名;`
 ```
 
 HTML
