--- a/JavaScript/関数式.md
+++ b/JavaScript/関数式.md
@@ -2,6 +2,21 @@
 
 関数を変数へ代入している式のことを「関数式」と呼ぶ。
 
+### 関数はオブジェクト
+
+```
+JavaScriptでは、関数は関数オブジェクトとも呼ばれ、オブジェクトの一種です。
+関数はただのオブジェクトとは異なり、関数名に()をつけることで、関数としてまとめた処理を呼び出すことができます。
+```
+引用:https://jsprimer.net/basic/function-declaration/
+
+一方で関数の語尾に`()`を付けなけれは、その関数を「オブジェクト」として参照することができる。そして、変数へ「代入」したり、関数の「引数」として使うことも可能。
+
+```
+また、関数はほかの値と同じように変数へ代入したり、関数の引数として渡すことが可能です。
+```
+引用:上記と同じ
+
 ### 呼び出す時は変数名で呼び出す
 
 変数に代入した関数を呼び出すには、以下のように記述する。
