--- a/JavaScript/関数式.md
+++ b/JavaScript/関数式.md
@@ -35,7 +35,7 @@ console.log()の「console」の部分は実はオブジェクトだったんで
 オブジェクトの中の関数を実行する時は「.」ドットで繋いで書くとオブジェクトの中の関数を実行することができます。
 ```
 引用:https://tonoblog.yutaka01.net/2022/10/29/javascript-object/
-### 呼び出す時は変数名で呼び出す
+### 関数式を呼び出す時は変数名で呼び出す
 
 変数に代入した関数を呼び出すには、以下のように記述する。(語尾に`()`を付けなければ、たんなるオブジェクトとして扱われる)
 
@@ -77,6 +77,30 @@ HTML
 </body>
 
 ```
+
+**②同時ver**
+
+JavaScript
+```
+const unco = function() {　　//ここで変数uncoに「関数」を代入している。
+                             //この際、関数名は省略することができ、このような名前を持たない関数のことを「無名関数」と呼ぶ。
+   alert("俺を呼んだか？");　　
+};　　　　　　　　　　　　　　　//変数を「宣言」しているため、最後に`;`を付ける必要がある。
+```
+
+HTML
+```
+<body>
+<script src="sample.js"></script>
+
+<button type="button" onclick="unco()">ポチッ</button>　//onclickの部分を「変数名unco」に変更している
+
+</body>
+```
+
+・関数式について参考になるページ
+https://beginners-hp.com/javascript/function-expression.html
+
 
 
 
