--- a/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
+++ b/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
@@ -31,4 +31,20 @@ div.child{
 }
 ```
 
+### なぜ親要素をrelativeに子要素をabsoluteにすると良いのか
+
+このことを理解するには、`absolute`の仕様をしっかりと把握することが大切になる。
+
+以下はMDNのabosoluteについて書かれた説明を意訳したもの。
+
+>要素のためのスペースが確保されません。代わりに、その要素の位置を、位置指定された祖先要素のうちもっとも近いもの、もしくは、その要素の包含ブロックを基準にして決めます。
+>絶対位置指定されたボックスのマージンは、他の要素のマージンと相殺されません。
+引用:https://qiita.com/takayuki_kito/items/dbf1774482fc49ea7b39
+
+上記の引用文のうち特に重要なのが以下の箇所。
+
+>その要素の位置を、位置指定された祖先要素のうちもっとも近いもの、もしくは、その要素の包含ブロックを基準にして決めます。
+
+意味を詳しくみていく。
+
 
