--- a/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
+++ b/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
@@ -47,4 +47,7 @@ div.child{
 
 意味を詳しくみていく。
 
+「位置指定された」とはどういうことかというと、positionプロパティの値が`static`(デフォルト値)以外の時ということ。
+
+具体的には、positionプロパティの値が`relative`, `absolute`, `fixed`, `sticky`の時ということ。(ちなみに`sticky`は、スクロールしても固定したい時などに使用される。)
 
